--- a/src/main/resources/org/jenkinsci/plugins/gitparam/GitParameterDefinition/help-parseVersion.html
+++ b/src/main/resources/org/jenkinsci/plugins/gitparam/GitParameterDefinition/help-parseVersion.html
@@ -1,5 +1,5 @@
 <div>
     This flag has influence on sorting. 
-    When your tags/branches contains versions, use this option to sort them properly.
+    When your tags/branches contain versions, use this option to sort them properly.
     Otherwise they will be sorted lexicographically.
 </div>
